--- a/kaggle_starter.ipynb
+++ b/kaggle_starter.ipynb
@@ -97,6 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Function for filling NaNs with random values based on other values in the collumn.  \n",
     "np.random.seed(0)\n",
     "def fillNaN_with_unifrand(df):\n",
     "    a = df.values\n",
@@ -112,6 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Cleaning the trainingset\n",
     "def clean_train(df):\n",
     "    df_cleaned_train = df.copy()\n",
     "\n",
@@ -722,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -731,7 +733,7 @@
        "'\\nfrom sklearn.decomposition import PCA\\nX = np.array([[-1, -1], [-2, -1], [-3, -2], [1, 1], [2, 1], [3, 2]])\\nclf = PCA(n_components=6)\\nclf.fit(X_train)\\n\\nX_train_T = clf.transform(X_train)\\nX_test_T = clf.transform(X_test)\\n'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1071,7 +1073,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
